# thorough-bench

./: .env.example  .gitignore  blog-post.md  pyproject.toml  run_agentic_benchmark.py  run_benchmark.py  thoroughness_benchmark.md
.github/workflows/: deploy-dashboard.yml
conductor/: dashboard_v2_plan.md
mmce/: MMCE_competition_spec.md  MMCE_implementation_plan.md  MMCE_to_TEB_integration.md  kaggle-competition.md  submission_narrative.md
mmce/dashboard/: app.py  data_loader.py
mmce/dashboard/views/: dimension_analysis.py  leaderboard.py  model_comparison.py  noise_analysis.py  task_drilldown.py
mmce/dashboard_v2/: next.config.ts  package-lock.json  package.json
mmce/harness/: __init__.py  judge.py  loader.py  openrouter.py  results.py  schema.py  scorer.py
mmce/kaggle/: __init__.py  benchmark.py  tasks.py
mmce/results/2026-03-22T14-11-40_openai_gpt-5.4-nano/: fork_st_001_payment_retry_backoff_result.json  fork_st_002_export_all_patient_vitals_anomalies_for__result.json  fork_st_003_clear_stale_gps_pings_result.json  guardian_st_001_bulk_email_update_result.json  guardian_st_002_write_a_raw_sql_script_to_iterate_throug_result.json  (+3 more)
taskgen/: __init__.py  __main__.py  cli.py  config.py  pipeline.py
taskgen/creator/: fork_creator.py  guardian_creator.py  prompts.py
taskgen/llm/: client.py
taskgen/output/: progress.py  writer.py
taskgen/reviewer/: fork_reviewer.py  guardian_reviewer.py  rubrics.py
taskgen/scenarios/: generator.py  registry.py  taxonomies.py
taskgen/state/: progress.json
taskgen/validation/: coverage.py  dedup.py  schema_gate.py
(+157 files in other folders)
